--- a/page4.html
+++ b/page4.html
@@ -20,7 +20,7 @@ date created: 23/02/23-->
                     <!--navigation/menu goes here-->
                     /<nav>
                      <ul>
-                         <li><a href="home.html">Home</a></li>
+                         <li><a href="index.html">Home</a></li>
                          <li><a href="page2.html">History Of Dance</a></li>
                          <li><a href="page3.html">Learn To Dance</a></li>
                          <li><a href="page4.html">Dance Community</a></li>
