--- a/page2.html
+++ b/page2.html
@@ -6,19 +6,19 @@ date created: 23/02/23-->
 <html lang="en">
     <head>
         <meta charset="utf-8"><!--8 bit char encoding, capable of encoding all possible characters-->
-        <meta name="description" content="new2dance">
+        <meta name="description" content="history of dance">
         <meta name="keywords" content="dance, dance styles, learn to dance, dancer, dancing">
-        <title>New2Dance</title>
+        <title>History of Dance</title>
         <style></style>
  <link rel ="stylesheet" type="text/css" href="style/style.css">
     </head>
     <body>
         <header> 
          <!--inline styling for the image to the logo-->
-            <img style="float:left; margin-right:10px;" src="images/favicon-96x96.png" alt="logo"width="110">
+         <img class="logoImg" style="margin-right:10px;" src="images/favicon-96x96.png" alt="logo"width="150"height="100">
             <h1>New2Dance</h1>
                     <!--navigation/menu goes here-->
-                    /<nav>
+                    <nav>
                      <ul>
                          <li><a href="index.html">Home</a></li>
                          <li><a href="page2.html">History Of Dance</a></li>
@@ -29,21 +29,59 @@ date created: 23/02/23-->
                     </nav>
         </header>
       <main>
+        <h2>Dance Styles</h2>
      <section class="sectionDisplay">
-        <img width="300" src="images/ballet_frontkick.jpg" alt="front kick"class="center"/>
-        <p>This is some text.This is some text.This is some text.This is some text.This is some text.
-            This is some text.This is some text.This is some text.This is some text.This is some text.
-            This is some text.This is some text.This is some text.This is some text.This is some text.
-            This is some text.This is some text.This is some text.This is some text.This is some text.
-            This is some text.This is some text.This is some text.This is some text.This is some text.
-            This is some text.This is some text.This is some text.This is some text.This is some text.
-        </p>
+
+        <h3>Classical Ballet</h3>
+        <section class="col_detail">
+            <img class="showimages" src="images/ballet_frontkick.jpg"/>
+            <p> Classical ballet developed in the late 19th century when Marius Petipa was ballet master in St Petersburg. Classical ballet is a mixture of the French style of Romantic ballet, the techniques developed in Italy in the late 19th century, and Russian teaching.</p>
+             <p>Today, Swan Lake is one of the most famous and popular of all ballets, yet the first version in Moscow in 1877 flopped. Choreographer Wenzel Reisinger, used to making dances to simple rhythms and easy tunes, simply could not cope with Tchaikovsky’s elaborate, symphonic-style score.
+                <a href="http://www.vam.ac.uk/content/articles/c/classic-ballet/#:~:text=Classical%20ballet%20developed%20in%20the,19th%20century%2C%20and%20Russian%20teaching.">More history here ..</a>
+             </p>      
+        </section>
      </section>
       </main>
-        <footer>
-            <address>calry<br>sligo</br></address>
-            <p id="copyright" class="right">&copy this is copyright 2023</p>              
-        </footer>
+      <aside>
+        <h2>Local Info</h2>
+        <p>Click the map icon below to find dance schools near you!!
+        </p>
+          <a target="_blank" href="https://www.google.com/maps/search/dance+schools"><img class="center-image"src="images/map-icon-circle.png" width="100" height="100" alt="map icon"></a>
+      </aside>
+     
+      <footer>
+        <table class="footer-table">
+          <tr>
+            <td>
+              <img src="images/favicon-96x96.png" alt="Logo">
+              <p>&copy; 2023 Learn2Dance</p>
+            </td>
+            <td>
+              <h3>Contact Us</h3>
+              <p>dance street<br>dance town, France<br>Phone: 00123 4567 8919<br>Email: info@dance.com</p>
+            </td>
+            <td>
+              <h3>Follow Us</h3>
+              <ul class="social-media">
+                <li><a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png"></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/"><img src="images/insta.png"></a></li>
+                <li><a target="_blank" href="https://www.spotify.com/"><img src="images/spotify.png"></a></li>
+              </ul>
+            </td>
+            <td>
+                <h3>Navigation</h3>
+                <nav >
+                  <ol type="1">
+                    <li ><a href="index.html">Home</a></li>
+                    <li><a href="page2.html">History</a></li>
+                    <li><a href="page3.html">Learn</a></li>
+                    <li><a href="page4.html">Community</a></li>
+                  </ol>
+                </nav>
+              </td>
+          </tr>
+        </table>
+      </footer>
      </body>
     
 </html>
