--- a/page3.html
+++ b/page3.html
@@ -6,19 +6,24 @@ date created: 23/02/23-->
 <html lang="en">
     <head>
         <meta charset="utf-8"><!--8 bit char encoding, capable of encoding all possible characters-->
-        <meta name="description" content="new2dance">
+        <meta name="description" content="learn to dance">
         <meta name="keywords" content="dance, dance styles, learn to dance, dancer, dancing">
-        <title>New2Dance</title>
-        <style></style>
+        <title>Learn to Dance</title>
+        <style>
+            .iconImg{
+    max-width: 3em;
+    max-height: 3em;
+}
+        </style>
  <link rel ="stylesheet" type="text/css" href="style/style.css">
     </head>
     <body>
         <header> 
          <!--inline styling for the image to the logo-->
-            <img style="float:left; margin-right:10px;" src="images/favicon-96x96.png" alt="logo"width="110">
+         <img class="logoImg" style="margin-right:10px;" src="images/favicon-96x96.png" alt="logo"width="150"height="100">
             <h1>New2Dance</h1>
                     <!--navigation/menu goes here-->
-                    /<nav>
+                    <nav>
                      <ul>
                          <li><a href="index.html">Home</a></li>
                          <li><a href="page2.html">History Of Dance</a></li>
@@ -29,33 +34,73 @@ date created: 23/02/23-->
                     </nav>
         </header>
       <main>
-     <section class="sectionDisplay">
-        <h2 class="textCenter">ballet equipment</h2>
-        <img width="300" src="images/balletshoes.jpg" alt="ballet shoes"class="center"/>
-        <p>This is some text.This is some text.This is some text.This is some text.This is some text.
-            This is some text.This is some text.This is some text.This is some text.This is some text.
-            This is some text.This is some text.This is some text.This is some text.This is some text.
-            This is some text.This is some text.This is some text.This is some text.This is some text.
-            This is some text.This is some text.This is some text.This is some text.This is some text.
-            This is some text.This is some text.This is some text.This is some text.This is some text.
-        </p>
+     <section class="videoContent">
+        <h2 class="textCenter">Tips on learning how to dance</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/C62596gVnT8" title="YouTube video player" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
      </section>
-     <section class="sectionDisplay">
-        <h2 class="textCenter">ballet technique</h2>
-        <img width="300" src="images/ballet_frontkick.jpg" alt="ballerina"class="center"/>
-        <p>This is some text.This is some text.This is some text.This is some text.This is some text.
-            This is some text.This is some text.This is some text.This is some text.This is some text.
-            This is some text.This is some text.This is some text.This is some text.This is some text.
-            This is some text.This is some text.This is some text.This is some text.This is some text.
-            This is some text.This is some text.This is some text.This is some text.This is some text.
-            This is some text.This is some text.This is some text.This is some text.This is some text.
-        </p>
+     <section>
+        <h2>Best free resources</h2>
+        <ol>
+            <li><a href="https://www.youtube.com/@steezystudio">Steezy Youtube Channel </a><img class="iconImg" src="images/youtube-icon.png">
+                <p>
+                    If you've ever felt lost and unsure as to where to look for dance information, tips, tutorials, and classes...
+                     this video will guide you to a lot of the different types of dance content that range from what to wear, 
+                     basic steps, developing personal style, history, and MUCH more!  
+                </p></li>
+
+                <li><a href="https://www.learntodance.com/online-dance-lessons/">Learntodance.com</a>
+                <p>
+                    Learn to dance online from your home with our HD videos. Below you will find links to free online dance classes.
+                     Most of these lessons come directly from the premium courses we offer. You will find video tutorials 
+                     in these styles: Club dance, Hip Hop dance, Ballroom and Latin, Ballet, Breakdancing, Tap dance, Irish dancing,
+                      Country Western, Free style, Belly dancing, and more.
+                </p>
+                </li>
+        </ol>
      </section>
       </main>
-        <footer>
-            <address>calry<br>sligo</br></address>
-            <p id="copyright" class="right">&copy this is copyright 2023</p>              
-        </footer>
+      <aside>
+        <h2>Local Info</h2>
+        <p>Click the map icon below to find dance schools near you!!
+        </p>
+          <a target="_blank" href="https://www.google.com/maps/search/dance+schools"><img class="center-image"src="images/map-icon-circle.png" width="100" height="100" alt="map icon"></a>
+      </aside>
+    
+      <footer>
+        <table class="footer-table">
+          <tr>
+            <td>
+              <img src="images/favicon-96x96.png" alt="Logo">
+              <p>&copy; 2023 Learn2Dance</p>
+            </td>
+            <td>
+              <h3>Contact Us</h3>
+              <p>dance street<br>dance town, France<br>Phone: 00123 4567 8919<br>Email: info@dance.com</p>
+            </td>
+            <td>
+              <h3>Follow Us</h3>
+              <ul class="social-media">
+                <li><a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png"></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/"><img src="images/insta.png"></a></li>
+                <li><a target="_blank" href="https://www.spotify.com/"><img src="images/spotify.png"></a></li>
+              </ul>
+            </td>
+            <td>
+                <h3>Navigation</h3>
+                <nav >
+                  <ol type="1">
+                    <li ><a href="index.html">Home</a></li>
+                    <li><a href="page2.html">History</a></li>
+                    <li><a href="page3.html">Learn</a></li>
+                    <li><a href="page4.html">Community</a></li>
+                  </ol>
+                </nav>
+              </td>
+          </tr>
+        </table>
+      </footer>
      </body>
     
 </html>
