first draft complete

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ date created: 23/02/23-->
                 <p>
                     The ability to dance is born in each of us, and the yearning to dance is as much a part of our emotional fiber as hunger, fear, and love.  All societies, from the most ancient to the modern day and across the world, share a common need for, and appreciation of dancing.
                     Every person is a potential dancer.  Some may dance better than others, but all can learn to dance well enough to enjoy it.  Many people feel the urge to dance, but don’t know how to express it.  Learning to dance can be a personal challenge, a new interest and creative outlet that builds self confidence through a sense of achievement.  When you learn the basic rhythms of dance, a delightful new world opens up.  So, learn to dance today!
-                       <a href="https://www.danceatapplause.com/learn-to-dance-because-of-reasons/">More info here...</a>
+                       <a target="_blank" href="https://www.danceatapplause.com/learn-to-dance-because-of-reasons/">More info here...</a>
                 </p>
           </main>
             <aside>
