--- a/page2.html
+++ b/page2.html
@@ -37,10 +37,20 @@ date created: 23/02/23-->
             <img class="showimages" src="images/ballet_frontkick.jpg"/>
             <p> Classical ballet developed in the late 19th century when Marius Petipa was ballet master in St Petersburg. Classical ballet is a mixture of the French style of Romantic ballet, the techniques developed in Italy in the late 19th century, and Russian teaching.</p>
              <p>Today, Swan Lake is one of the most famous and popular of all ballets, yet the first version in Moscow in 1877 flopped. Choreographer Wenzel Reisinger, used to making dances to simple rhythms and easy tunes, simply could not cope with Tchaikovsky’s elaborate, symphonic-style score.
-                <a href="http://www.vam.ac.uk/content/articles/c/classic-ballet/#:~:text=Classical%20ballet%20developed%20in%20the,19th%20century%2C%20and%20Russian%20teaching.">More history here ..</a>
+                <a target="_blank" href="http://www.vam.ac.uk/content/articles/c/classic-ballet/#:~:text=Classical%20ballet%20developed%20in%20the,19th%20century%2C%20and%20Russian%20teaching.">More history here ..</a>
              </p>      
         </section>
+      </section>
+      <section class="sectionDisplay">
+        <h2>Ballet shoes</h2>
+        <section class="col_detail">
+          <img class="showimages" src="images/balletshoes.jpg"/>
+          <p> A pointe shoe, also called a ballet shoe,[1][2][3][4] is a type of shoe worn by ballet dancers when performing pointe work. Pointe shoes were conceived in response to the desire for dancers to appear weightless and sylph-like and have evolved to enable dancers to dance en pointe (on the tips of their toes) for extended periods of time. They are manufactured in a variety of colors, most commonly in shades of light pink.</p>
+           <p>Dancers typically "break in" new pointe shoes to reduce or eliminate the discomfort they commonly cause. Typically this is done by performing relevés that flex the box and shank in a natural manner, thus causing the box shape and shank flex points to adapt to the dancer's feet
+              <a target="_blank" href="https://en.wikipedia.org/wiki/Pointe_shoe">More info here ..</a>
+           </p>      
      </section>
+    </section>
       </main>
       <aside>
         <h2>Local Info</h2>
