--- a/page3.html
+++ b/page3.html
@@ -43,21 +43,39 @@ date created: 23/02/23-->
      <section>
         <h2>Best free resources</h2>
         <ol>
-            <li><a href="https://www.youtube.com/@steezystudio">Steezy Youtube Channel </a><img class="iconImg" src="images/youtube-icon.png">
+            <li><a target="_blank" href="https://www.youtube.com/@steezystudio">Steezy Youtube Channel </a><img class="iconImg" src="images/youtube-icon.png">
                 <p>
                     If you've ever felt lost and unsure as to where to look for dance information, tips, tutorials, and classes...
                      this video will guide you to a lot of the different types of dance content that range from what to wear, 
                      basic steps, developing personal style, history, and MUCH more!  
                 </p></li>
 
-                <li><a href="https://www.learntodance.com/online-dance-lessons/">Learntodance.com</a>
+                <li><a target="_blank" href="https://www.learntodance.com/online-dance-lessons/">Learntodance.com</a>
                 <p>
                     Learn to dance online from your home with our HD videos. Below you will find links to free online dance classes.
                      Most of these lessons come directly from the premium courses we offer. You will find video tutorials 
                      in these styles: Club dance, Hip Hop dance, Ballroom and Latin, Ballet, Breakdancing, Tap dance, Irish dancing,
-                      Country Western, Free style, Belly dancing, and more.
+                     Country Western, Free style, Belly dancing, and more.
                 </p>
                 </li>
+
+                <li><a target="_blank" href="https://www.youtube.com/@BalletMisfit">Ballet Misfit Youtube Channel </a><img class="iconImg" src="images/youtube-icon.png">
+                    <p>
+                        Enjoy this ballet lesson for beginners at home! It's a simple beginner ballet workout where I introduce some basic
+                         ballet terminology at the barre. This video is meant to help folks learn the basics of ballet.
+                    </p></li>
+
+                    <li><a target="_blank" href="https://www.youtube.com/playlist?list=PLdE78yobHMPkVVhSw5a5bapQzQd0h2NF1">Just dance full gameplay</a><img class="iconImg" src="images/youtube-icon.png">
+                        <p>
+                            Check out my channel for more Just Dance gameplay and dancing. I have the entire Just Dance collection of games
+                             so will be uploading gameplay for every track of every game.
+                        </p></li>
+                    
+                        <li><a target="_blank" href="https://www.youtube.com/@ti-and-me">ti-and-me youtube channel</a><img class="iconImg" src="images/youtube-icon.png">
+                            <p>
+                                Welcome to Ti & Me TV! This channel is full of dance tutorials, classes, choreography, entertainment, and more. 
+                                Make sure to subscribe so you don't miss a video!
+                            </p></li>
         </ol>
      </section>
       </main>
