--- a/page4.html
+++ b/page4.html
@@ -76,7 +76,7 @@ date created: 23/02/23-->
             <input type="text" name="last_name" id="last_name"><br>
 
             <label for="email">Email: <span class="required">*</span></label>
-            <input type="email" name="email" id="email" required placeholder="johndoe@example.com"><br>
+            <input type="email" name="email" id="email" required placeholder="donaldTrump@example.com"><br>
 
             <label for="gender">Gender: </label>
             <input type="radio" id="gender" name="gender" value="male"> Male
