--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--Thiss is my website on dance
     purpose: dance education
    created mar-23
-date created: 23/02/23-->
+date created: 18/04/23-->
    <!DOCTYPE html>
    <html lang="en">
        <head>
@@ -9,6 +9,7 @@ date created: 23/02/23-->
            <meta name="description" content="new2dance">
            <meta name="keywords" content="dance, dance styles, learn to dance, dancer, dancing">
            <title>New2Dance</title>
+           <link rel="icon" type="image/x-icon" href="images/favicon.ico">
            <style>
              
            </style>
@@ -17,7 +18,7 @@ date created: 23/02/23-->
        <body>
            <header> 
             <!--inline styling for the image to the logo-->
-               <img class="logoImg" style="margin-right:10px;" src="images/favicon-96x96.png" alt="logo"width="150"height="100">
+               <img class="logoImg" style="margin-right:10px;" src="images/favicon-96x96.png" alt="logo" width="150" height="100">
                <h1>New2Dance</h1>
                        <!--navigation/menu goes here-->
                        <nav>
@@ -31,7 +32,8 @@ date created: 23/02/23-->
                        </nav>
            </header>
          <main>
-            <img class="border" src="images/stage-dance.jpg" width="100%"height=400/>
+          <p>"This is a college project completed as part of an assignment."</p>
+            <img class="border" src="images/stage-dance.jpg" width="100" height="400" alt="group dancing on stage">
                 <h2>About Us</h2>
                 <p>
                     The ability to dance is born in each of us, and the yearning to dance is as much a part of our emotional fiber as hunger, fear, and love.  All societies, from the most ancient to the modern day and across the world, share a common need for, and appreciation of dancing.
@@ -43,7 +45,7 @@ date created: 23/02/23-->
             <h2>Local Info</h2>
             <p>Click the map icon below to find dance schools near you!!
             </p>
-              <a target="_blank" href="https://www.google.com/maps/search/dance+schools"><img class="center-image"src="images/map-icon-circle.png" width="100" height="100" alt="map icon"></a>
+              <a target="_blank" href="https://www.google.com/maps/search/dance+schools"><img class="center-image" src="images/map-icon-circle.png" width="100" height="100" alt="map icon"></a>
           </aside>
 
           <footer>
@@ -60,9 +62,9 @@ date created: 23/02/23-->
                 <td>
                   <h3>Follow Us</h3>
                   <ul class="social-media">
-                    <li><a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png"></a></li>
-                    <li><a target="_blank" href="https://www.instagram.com/"><img src="images/insta.png"></a></li>
-                    <li><a target="_blank" href="https://www.spotify.com/"><img src="images/spotify.png"></a></li>
+                    <li><a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png" alt="facebook logo"></a></li>
+                    <li><a target="_blank" href="https://www.instagram.com/"><img src="images/insta.png" alt="instagram logo"></a></li>
+                    <li><a target="_blank" href="https://www.spotify.com/"><img src="images/spotify.png" alt="spotify logo"></a></li>
                   </ul>
                 </td>
                 <td>
