--- a/page3.html
+++ b/page3.html
@@ -1,7 +1,7 @@
 <!--Thiss is my website on dance
     purpose: dance education
-   created mar-23
-date created: 23/02/23-->
+    page 3
+   created Apr-23-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -9,7 +9,8 @@ date created: 23/02/23-->
         <meta name="description" content="learn to dance">
         <meta name="keywords" content="dance, dance styles, learn to dance, dancer, dancing">
         <title>Learn to Dance</title>
-        <style>
+        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+        <style>           
             .iconImg{
     max-width: 3em;
     max-height: 3em;
@@ -20,7 +21,7 @@ date created: 23/02/23-->
     <body>
         <header> 
          <!--inline styling for the image to the logo-->
-         <img class="logoImg" style="margin-right:10px;" src="images/favicon-96x96.png" alt="logo"width="150"height="100">
+         <img class="logoImg" style="margin-right:10px;" src="images/favicon-96x96.png" alt="logo" width="150" height="100">
             <h1>New2Dance</h1>
                     <!--navigation/menu goes here-->
                     <nav>
@@ -43,7 +44,7 @@ date created: 23/02/23-->
      <section>
         <h2>Best free resources</h2>
         <ol>
-            <li><a target="_blank" href="https://www.youtube.com/@steezystudio">Steezy Youtube Channel </a><img class="iconImg" src="images/youtube-icon.png">
+            <li><a target="_blank" href="https://www.youtube.com/@steezystudio">Steezy Youtube Channel </a><img class="iconImg" alt="youtube logo" src="images/youtube-icon.png">
                 <p>
                     If you've ever felt lost and unsure as to where to look for dance information, tips, tutorials, and classes...
                      this video will guide you to a lot of the different types of dance content that range from what to wear, 
@@ -59,19 +60,19 @@ date created: 23/02/23-->
                 </p>
                 </li>
 
-                <li><a target="_blank" href="https://www.youtube.com/@BalletMisfit">Ballet Misfit Youtube Channel </a><img class="iconImg" src="images/youtube-icon.png">
+                <li><a target="_blank" href="https://www.youtube.com/@BalletMisfit">Ballet Misfit Youtube Channel </a><img class="iconImg" alt="youtube logo" src="images/youtube-icon.png">
                     <p>
                         Enjoy this ballet lesson for beginners at home! It's a simple beginner ballet workout where I introduce some basic
                          ballet terminology at the barre. This video is meant to help folks learn the basics of ballet.
                     </p></li>
 
-                    <li><a target="_blank" href="https://www.youtube.com/playlist?list=PLdE78yobHMPkVVhSw5a5bapQzQd0h2NF1">Just dance full gameplay</a><img class="iconImg" src="images/youtube-icon.png">
+                    <li><a target="_blank" href="https://www.youtube.com/playlist?list=PLdE78yobHMPkVVhSw5a5bapQzQd0h2NF1">Just dance full gameplay</a><img class="iconImg" alt="youtube logo" src="images/youtube-icon.png">
                         <p>
                             Check out my channel for more Just Dance gameplay and dancing. I have the entire Just Dance collection of games
                              so will be uploading gameplay for every track of every game.
                         </p></li>
                     
-                        <li><a target="_blank" href="https://www.youtube.com/@ti-and-me">ti-and-me youtube channel</a><img class="iconImg" src="images/youtube-icon.png">
+                        <li><a target="_blank" href="https://www.youtube.com/@ti-and-me">ti-and-me youtube channel</a><img class="iconImg" alt="youtube logo" src="images/youtube-icon.png">
                             <p>
                                 Welcome to Ti & Me TV! This channel is full of dance tutorials, classes, choreography, entertainment, and more. 
                                 Make sure to subscribe so you don't miss a video!
@@ -83,7 +84,7 @@ date created: 23/02/23-->
         <h2>Local Info</h2>
         <p>Click the map icon below to find dance schools near you!!
         </p>
-          <a target="_blank" href="https://www.google.com/maps/search/dance+schools"><img class="center-image"src="images/map-icon-circle.png" width="100" height="100" alt="map icon"></a>
+          <a target="_blank" href="https://www.google.com/maps/search/dance+schools"><img class="center-image" src="images/map-icon-circle.png" width="100" height="100" alt="map icon"></a>
       </aside>
     
       <footer>
@@ -100,9 +101,9 @@ date created: 23/02/23-->
             <td>
               <h3>Follow Us</h3>
               <ul class="social-media">
-                <li><a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png"></a></li>
-                <li><a target="_blank" href="https://www.instagram.com/"><img src="images/insta.png"></a></li>
-                <li><a target="_blank" href="https://www.spotify.com/"><img src="images/spotify.png"></a></li>
+                <li><a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png" alt="facebook logo"></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/"><img src="images/insta.png" alt="instagram logo"></a></li>
+                <li><a target="_blank" href="https://www.spotify.com/"><img src="images/spotify.png" alt="spotify logo"></a></li>
               </ul>
             </td>
             <td>
