--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!--Thiss is my website on dance
     purpose: dance education
-   created mar-23
-date created: 23/02/23-->
+    page 2
+   created Apr-23-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -9,13 +9,14 @@ date created: 23/02/23-->
         <meta name="description" content="history of dance">
         <meta name="keywords" content="dance, dance styles, learn to dance, dancer, dancing">
         <title>History of Dance</title>
+        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
         <style></style>
  <link rel ="stylesheet" type="text/css" href="style/style.css">
     </head>
     <body>
         <header> 
          <!--inline styling for the image to the logo-->
-         <img class="logoImg" style="margin-right:10px;" src="images/favicon-96x96.png" alt="logo"width="150"height="100">
+         <img class="logoImg" style="margin-right:10px;" src="images/favicon-96x96.png" alt="logo" width="150" height="100">
             <h1>New2Dance</h1>
                     <!--navigation/menu goes here-->
                     <nav>
@@ -32,9 +33,9 @@ date created: 23/02/23-->
         <h2>Dance Styles</h2>
      <section class="sectionDisplay">
 
-        <h3>Classical Ballet</h3>
+        <h2>Classical Ballet</h2>
         <section class="col_detail">
-            <img class="showimages" src="images/ballet_frontkick.jpg"/>
+            <img class="showimages" src="images/ballet_frontkick.jpg" alt="ballet dancer leg kick">
             <p> Classical ballet developed in the late 19th century when Marius Petipa was ballet master in St Petersburg. Classical ballet is a mixture of the French style of Romantic ballet, the techniques developed in Italy in the late 19th century, and Russian teaching.</p>
              <p>Today, Swan Lake is one of the most famous and popular of all ballets, yet the first version in Moscow in 1877 flopped. Choreographer Wenzel Reisinger, used to making dances to simple rhythms and easy tunes, simply could not cope with Tchaikovsky’s elaborate, symphonic-style score.
                 <a target="_blank" href="http://www.vam.ac.uk/content/articles/c/classic-ballet/#:~:text=Classical%20ballet%20developed%20in%20the,19th%20century%2C%20and%20Russian%20teaching.">More history here ..</a>
@@ -44,7 +45,7 @@ date created: 23/02/23-->
       <section class="sectionDisplay">
         <h2>Ballet shoes</h2>
         <section class="col_detail">
-          <img class="showimages" src="images/balletshoes.jpg"/>
+          <img class="showimages" src="images/balletshoes.jpg" alt="ballet pointe shoes">
           <p> A pointe shoe, also called a ballet shoe,[1][2][3][4] is a type of shoe worn by ballet dancers when performing pointe work. Pointe shoes were conceived in response to the desire for dancers to appear weightless and sylph-like and have evolved to enable dancers to dance en pointe (on the tips of their toes) for extended periods of time. They are manufactured in a variety of colors, most commonly in shades of light pink.</p>
            <p>Dancers typically "break in" new pointe shoes to reduce or eliminate the discomfort they commonly cause. Typically this is done by performing relevés that flex the box and shank in a natural manner, thus causing the box shape and shank flex points to adapt to the dancer's feet
               <a target="_blank" href="https://en.wikipedia.org/wiki/Pointe_shoe">More info here ..</a>
@@ -56,7 +57,7 @@ date created: 23/02/23-->
         <h2>Local Info</h2>
         <p>Click the map icon below to find dance schools near you!!
         </p>
-          <a target="_blank" href="https://www.google.com/maps/search/dance+schools"><img class="center-image"src="images/map-icon-circle.png" width="100" height="100" alt="map icon"></a>
+          <a target="_blank" href="https://www.google.com/maps/search/dance+schools"><img class="center-image" src="images/map-icon-circle.png" width="100" height="100" alt="map icon"></a>
       </aside>
      
       <footer>
@@ -73,9 +74,9 @@ date created: 23/02/23-->
             <td>
               <h3>Follow Us</h3>
               <ul class="social-media">
-                <li><a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png"></a></li>
-                <li><a target="_blank" href="https://www.instagram.com/"><img src="images/insta.png"></a></li>
-                <li><a target="_blank" href="https://www.spotify.com/"><img src="images/spotify.png"></a></li>
+                <li><a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png" alt="facebook logo"></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/"><img src="images/insta.png" alt="instagram logo"></a></li>
+                <li><a target="_blank" href="https://www.spotify.com/"><img src="images/spotify.png" alt="spotify logo"></a></li>
               </ul>
             </td>
             <td>
