--- a/page4.html
+++ b/page4.html
@@ -1,7 +1,8 @@
 <!--Thiss is my website on dance
     purpose: dance education
-   created mar-23
-date created: 23/02/23-->
+    page 4
+   created Apr-23
+date created: 18/04/23-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -9,8 +10,9 @@ date created: 23/02/23-->
         <meta name="description" content="dance community">
         <meta name="keywords" content="dance, dance styles, learn to dance, dancer, dancing">
         <title>Dance Community</title>
+        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
         <style>
-            .body{
+            body{
                 font-family: sans-serif;
                 background-image: url(images/performance.jpg);
                 background-size: cover;
@@ -58,13 +60,12 @@ date created: 23/02/23-->
             }
         </style>
  <link rel ="stylesheet" type="text/css" href="style/style.css">
-    </head>
-   
+      </head>
+      <body>
         <header id="header"> 
             <a href="index.html"><img src="images/back-arrow.png" width="100" height="100" alt="map icon"></a>
                         <p class="formHeader">Fill out this form to join our dance community</p>          
         </header>
-    <body class="body">
       <main class="main">
         <section>
             <h4>Please enter the following information: (form action="http:/foo.com" method="get")</h4>
@@ -96,7 +97,7 @@ date created: 23/02/23-->
             id="message" name="message" placeholder="Your message must be less than 200 characters" data-maxlength="200"></textarea> <br>
 
             <input type="submit" name="submit" id="button" value="Register">
-            <input type="reset"name="reset" id="reset">
+            <input type="reset" name="reset" id="reset">
         </form>
         <p style="margin-left: 138px"><span class="required">*</span><em> Indicates a required field </em></p>
         </section>
@@ -117,9 +118,9 @@ date created: 23/02/23-->
             <td>
               <h3>Follow Us</h3>
               <ul class="social-media">
-                <li><a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png"></a></li>
-                <li><a target="_blank" href="https://www.instagram.com/"><img src="images/insta.png"></a></li>
-                <li><a target="_blank" href="https://www.spotify.com/"><img src="images/spotify.png"></a></li>
+                <li><a target="_blank" href="https://www.facebook.com/"><img src="images/facebook.png" alt="facebook logo"></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/"><img src="images/insta.png" alt="instagram logo"></a></li>
+                <li><a target="_blank" href="https://www.spotify.com/"><img src="images/spotify.png" alt="spotify logo"></a></li>
               </ul>
             </td>
             <td>
@@ -136,6 +137,6 @@ date created: 23/02/23-->
           </tr>
         </table>
       </footer>
-     </body>
+  </body>
     
 </html>
