--- a/page4.html
+++ b/page4.html
@@ -105,7 +105,7 @@ date created: 18/04/23-->
       </main>
        
       <footer>
-        <table class="footer-table">
+        <table>
           <tr>
             <td>
               <img src="images/favicon-96x96.png" alt="Logo">
