--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ date created: 18/04/23-->
           </aside>
 
           <footer>
-            <table class="footer-table">
+            <table>
               <tr>
                 <td>
                   <img src="images/favicon-96x96.png" alt="Logo">
