--- a/page3.html
+++ b/page3.html
@@ -88,7 +88,7 @@
       </aside>
     
       <footer>
-        <table class="footer-table">
+        <table>
           <tr>
             <td>
               <img src="images/favicon-96x96.png" alt="Logo">
