descriptions to do

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ date created: 18/04/23-->
            </header>
          <main>
           <p>"This is a college project completed as part of an assignment."</p>
-            <img class="border" src="images/stage-dance.jpg" width="100" height="400" alt="group dancing on stage">
+            <img class="border" src="images/class-dance.jpg" width="100" height="400" alt="group dance class">
                 <h2>About Us</h2>
                 <p>
                     The ability to dance is born in each of us, and the yearning to dance is as much a part of our emotional fiber as hunger, fear, and love.  All societies, from the most ancient to the modern day and across the world, share a common need for, and appreciation of dancing.
