--- a/page4.html
+++ b/page4.html
@@ -14,7 +14,7 @@ date created: 18/04/23-->
         <style>
             body{
                 font-family: sans-serif;
-                background-image: url(images/performance.jpg);
+                background-image: url(images/community.jpg);
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
